# macportsGCCfixup

./: CMakeLists.txt  GCC.xcspec.in  LLVM_GCC.xcspec.in  README-macports.md  README.md  config.h.in  driverdriver.c  i386-g++-mp-version.in  i386-gcc-mp-version.in  x86_64-g++-mp-version.in  x86_64-gcc-mp-version.in
